--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-I want to die in pain
-please allow me to die in pain
+<!DOCTYPE html>
+<html lang="en-US">
+    <head>
+        <meta charset="utf-8"
+        <title>Jimmy's Website</title>
+    </head>
+<body>
+<h1>This is a big text heading.</h1>    
+<p>This is the first sentence on the website. Cool, right?</p>
+<h2>This is a smaller, but still big, heading.</h2>
+</body>
+</html>  
