--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8"
         <title>Jimmy's Website</title>
     </head>
 <body>
-<h1>This is a big text heading.</h1>    
-<p>This is the first sentence on the website. Cool, right?</p>
-<h2>This is a smaller, but still big, heading.</h2>
+    <header>
+     
+    </header>
+    <main>
+      <section>
+            <h1>This is a big text heading.</h1>    
+            <p>This is the first sentence on the website. Cool, right?</p>
+            <section>
+                <h2>This is a smaller, but still big, heading.</h2>
+                <p>This is another sentence.</p>
+            </section>
+    </section>
+    </main>
+     <footer>
+     <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="page2.html">Page 2</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+        </ul>
+    </nav>
+         Copyright &copy; Jimmy Pinto
+     </footer>
 </body>
 </html>  
